syntax = "proto3";
package pointer.core;

message FileHandlerResult {
  bool result = 1;
  int32 err_code = 2;
  string err_msg = 3;
}

message WorkspaceInfoQueryPayload {
  bool query_state = 1;
  string err_msg = 2;
  int32 err_code = 3;
  string name = 4;
  string owner_uid = 5;
  string owner_name = 6;
  int64 config_updated = 7;
  int64 created_at = 8;
  double version = 9;
  double min_compatible_version = 10;
}

message DirectoryQuery {
  string name = 1;
  string path = 2;
  string extension_name = 3;
  bool is_file = 4;
  bool is_type_unknown = 5;
  repeated DirectoryQuery children = 6 [deprecated = true];
}

message DirectoryQueryResult {
  FileHandlerResult query_state = 1;
  repeated DirectoryQuery payload = 2;
}
